Added images, copyright, some css and a media query

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Holidays!</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="assets/Present.jpeg">
     
 </head>
 <body>
@@ -21,15 +21,17 @@ Krampus’ job is to punish kids on the “naughty” list. Mostly he just frigh
 that he throws particularly bad children into his sack, or chains them up in his basket and carts them off to Hell. People in Austria
 and neighboring countries often dress up as Krampus in early December and wander the streets to scare children.
             </p>
-            <img src=""></img>
+            <a href="https://www.google.com/search?q=krampus&rlz=1CAJIKU_enUS1021&source=lnms&tbm=isch&sa=X&ved=2ahUKEwil2NHw1Pv7AhXFKlkFHdERD6YQ_AUoAXoECAMQAw&biw=1517&bih=750&dpr=0.9&safe=active&ssui=on#imgrc=T8MmGiVzugP3qM"><img src="assets/Krampus.jpeg"></img></a>
+            <p>Image found at Comic Beat. Tap on image for hyperlink to Comic Beat.</p>
         </div>
         <div class="nightOfTheRadishes">
-            <img src=""></img>
+            <a href="https://theculturetrip.com/mexico/articles/a-uniquely-oaxacan-festival-night-of-the-radishes/"><img src="assets/Night of the Radishes.jpg"></img></a>
             <p>
                 In Oaxaca, Mexico, December 23 marks La Noche de Rabanos (“The Night of the Radishes”), a festival in which merchants and artisans
 sell radishes that have been intricately carved to depict nativity scenes, local wildlife, familiar architecture and other relevant displays.
 The radish carvings are sold as Christmas centerpieces, and the creator of the best radish design wins a monetary prize.
             </p>
+            <p>Image found at Cutlure Trip. Tap on image for hyperlink to Cutlure Trip. </p>
         </div>
         <div class="kfcForChristmas">
             <p>
@@ -39,8 +41,10 @@ called Kurisumasu ni wa Kentakkii (“Kentucky for Christmas”). Christians mak
 so this campaign made up for a lack of Christmas holiday traditions. The KFC Christmas Meal is so popular, many customers pre-order
 their dinners — which include fried chicken, cake and champagne — months in advance.
             </p>
-            <img src=""></img>
+            <a href="https://groovyhistory.com/kfc-japan-christmas-kentucky-fried-chicken/2"><img src="assets/KFC for Christmas.jpg"></img></a>
+            <p>Image found at Groovy History. Tap on image for hyperlink to Groovy History.</p>
         </div>
     </section>
+    <p class= "copyrightForFav">Favicon was found in Pixabay.</p>
 </body>
 </html>
