Still some bugs needed to be fixed but flexed images and added color, fonts, and footer section.

--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
     <section class="holidaysInfo">
         <div class="Krampus">
             <p>
-                Santa’s worse half is a hairy, devil-like creature called Krampus. Legend has it that while Santa brings toys to “nice” children,
+                <a href="https://www.google.com/search?q=krampus&rlz=1CAJIKU_enUS1021&source=lnms&tbm=isch&sa=X&ved=2ahUKEwil2NHw1Pv7AhXFKlkFHdERD6YQ_AUoAXoECAMQAw&biw=1517&bih=750&dpr=0.9&safe=active&ssui=on#imgrc=T8MmGiVzugP3qM"><img src="assets/Krampus.jpeg"></img></a>Santa’s worse half is a hairy, devil-like creature called Krampus. Legend has it that while Santa brings toys to “nice” children,
 Krampus’ job is to punish kids on the “naughty” list. Mostly he just frightens the children with his beastly looks, but it’s said
 that he throws particularly bad children into his sack, or chains them up in his basket and carts them off to Hell. People in Austria
 and neighboring countries often dress up as Krampus in early December and wander the streets to scare children.
             </p>
-            <a href="https://www.google.com/search?q=krampus&rlz=1CAJIKU_enUS1021&source=lnms&tbm=isch&sa=X&ved=2ahUKEwil2NHw1Pv7AhXFKlkFHdERD6YQ_AUoAXoECAMQAw&biw=1517&bih=750&dpr=0.9&safe=active&ssui=on#imgrc=T8MmGiVzugP3qM"><img src="assets/Krampus.jpeg"></img></a>
             <p>Image found at Comic Beat. Tap on image for hyperlink to Comic Beat.</p>
         </div>
         <div class="nightOfTheRadishes">
-            <a href="https://theculturetrip.com/mexico/articles/a-uniquely-oaxacan-festival-night-of-the-radishes/"><img src="assets/Night of the Radishes.jpg"></img></a>
             <p>
-                In Oaxaca, Mexico, December 23 marks La Noche de Rabanos (“The Night of the Radishes”), a festival in which merchants and artisans
+                <a href="https://theculturetrip.com/mexico/articles/a-uniquely-oaxacan-festival-night-of-the-radishes/"><img src="assets/Night of the Radishes.jpg"></img></a>In Oaxaca, Mexico, December 23 marks La Noche de Rabanos (“The Night of the Radishes”), a festival in which merchants and artisans
 sell radishes that have been intricately carved to depict nativity scenes, local wildlife, familiar architecture and other relevant displays.
 The radish carvings are sold as Christmas centerpieces, and the creator of the best radish design wins a monetary prize.
             </p>
@@ -35,16 +33,17 @@ The radish carvings are sold as Christmas centerpieces, and the creator of the b
         </div>
         <div class="kfcForChristmas">
             <p>
-                In the United States, we associate Christmas with ham or figgy pudding, but in Japan, it’s all about Kentucky Fried Chicken.
+                <a href="https://groovyhistory.com/kfc-japan-christmas-kentucky-fried-chicken/2"><img src="assets/KFC for Christmas.jpg"></img></a>In the United States, we associate Christmas with ham or figgy pudding, but in Japan, it’s all about Kentucky Fried Chicken.
 An estimated 3.5 million Japanese families eat fried chicken on Christmas Eve thanks to a marketing stunt by KFC in the 1970s
 called Kurisumasu ni wa Kentakkii (“Kentucky for Christmas”). Christians make up a very small percentage of the Japanese population,
 so this campaign made up for a lack of Christmas holiday traditions. The KFC Christmas Meal is so popular, many customers pre-order
 their dinners — which include fried chicken, cake and champagne — months in advance.
             </p>
-            <a href="https://groovyhistory.com/kfc-japan-christmas-kentucky-fried-chicken/2"><img src="assets/KFC for Christmas.jpg"></img></a>
             <p>Image found at Groovy History. Tap on image for hyperlink to Groovy History.</p>
         </div>
     </section>
+    <footer>
     <p class= "copyrightForFav">Favicon was found in Pixabay.</p>
+    </footer>
 </body>
 </html>
