Adding animations but finished main project.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ their dinners — which include fried chicken, cake and champagne — months in 
             <p>Image found at Groovy History. Tap on image for hyperlink to Groovy History.</p>
         </div>
     </section>
-    <footer>
-    <p class= "copyrightForFav">Favicon was found in Pixabay.</p>
+    <footer class= "copyrightForFav">
+    <p>Favicon was found in Pixabay.</p>
     </footer>
 </body>
 </html>
