Submit for Grading

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ their dinners — which include fried chicken, cake and champagne — months in 
         </div>
     </section>
     <footer class= "copyrightForFav">
-    <p>Favicon was found in Pixabay.</p>
+    <p>Favicon was found in Pixabay. Link for favicon is <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fillustrations%2Fpresent-gift-wrapped-green-1417611%2F&psig=AOvVaw0xT0KT3qr78BUZG-TpQ12P&ust=1672924387397000&source=images&cd=vfe&ved=0CA0QjhxqFwoTCPi9wpL_rfwCFQAAAAAdAAAAABAD">Pixabay</a>.</p>
     </footer>
 </body>
 </html>
